test/ui/tests/metadata/keyless-record-of-text.stderr
error: found `,` but expected `:`
 --> ${DIRECTORY}/metadata/keyless-record-of-text.metadata:4:15
  |
4 |     "    THIS",
  |               ^ 
  |

error: aborting due to previous error

