test/ui/tests/metadata/keyless-record-of-text.metadata
# TEST fail metadata

{
    "    THIS",
    "      IS",
    "     OUR",
    "MANIFEST",
}
